ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-manager-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: business-logic-service
                port:
                  number: 5000
          - path: /dashboard/?(.*)
            pathType: Prefix
            backend:
              service:
                name: opensearch-service-dashboards
                port:
                  number: 5601
